# alpha-genesis-pro

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
config/: settings.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: STORAGE.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  service.yaml
src/: __init__.py  main.py
src/backtesting/: engine.py
src/core/: event_bus.py  events.py
src/data/: __init__.py  cache.py  data_feed.py
src/data/providers/: __init__.py  alpaca.py  base.py  binance.py  yahoo_finance.py
src/execution/: __init__.py  execution_engine.py  order_manager.py  paper_broker.py
src/execution/brokers/: __init__.py  alpaca.py  base.py  binance.py
src/monitoring/: __init__.py  alerts.py  health_checks.py  metrics.py
src/portfolio/: __init__.py  analytics.py  manager.py  rebalancer.py
src/risk/: risk_manager.py
src/storage/: __init__.py  storage.py
src/strategies/: base.py  mean_reversion.py  mean_reversion_talib.py  trend_following.py  trend_following_talib.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_full_system.py
tests/unit/: test_backtesting.py  test_portfolio.py  test_strategies.py
